{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 834,
  "lineage": "79dd060b-131e-2e89-2eb1-95dca032bf31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:648207145026:instance/i-0a083d52cc95182ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a083d52cc95182ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ookey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-09ac670d2c7e09d68",
            "private_dns": "ip-10-0-0-29.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-3-22-81-240.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.81.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5b6ee81b306e816",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ab1fd6e859cb8680"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084f2ac6c699f0f61",
            "tags": {
              "name": "terra-ce2"
            },
            "tags_all": {
              "name": "terra-ce2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab1fd6e859cb8680"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgp",
            "aws_subnet.mysecondSUBNET1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terra-new-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:internet-gateway/igw-064e86dc4c6a83504",
            "id": "igw-064e86dc4c6a83504",
            "owner_id": "648207145026",
            "tags": {
              "Name": "Terra-new-IGW1"
            },
            "tags_all": {
              "Name": "Terra-new-IGW1"
            },
            "vpc_id": "vpc-0b2cb28c9e688e12d"
          },
          "dependencies": [
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:route-table/rtb-0f50110cf32b88ae2",
            "id": "rtb-0f50110cf32b88ae2",
            "owner_id": "648207145026",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064e86dc4c6a83504",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2cb28c9e688e12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terra-new-IGW",
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b67124a4db60f853",
            "route_table_id": "rtb-0f50110cf32b88ae2",
            "subnet_id": "subnet-084f2ac6c699f0f61"
          },
          "dependencies": [
            "aws_internet_gateway.Terra-new-IGW",
            "aws_route_table.route-table-terra",
            "aws_subnet.mysecondSUBNET1",
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a734520660f3d8",
            "route_table_id": "rtb-0f50110cf32b88ae2",
            "subnet_id": "subnet-0ded6a82d6da4af81"
          },
          "dependencies": [
            "aws_internet_gateway.Terra-new-IGW",
            "aws_route_table.route-table-terra",
            "aws_subnet.mysecondSUBNET2",
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:security-group/sg-0ab1fd6e859cb8680",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab1fd6e859cb8680",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow ssh1",
            "name_prefix": "",
            "owner_id": "648207145026",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2cb28c9e688e12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysecondSUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:subnet/subnet-084f2ac6c699f0f61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f2ac6c699f0f61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648207145026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Prod-vpc,sub1,sub2"
            },
            "tags_all": {
              "name": "Prod-vpc,sub1,sub2"
            },
            "vpc_id": "vpc-0b2cb28c9e688e12d"
          },
          "dependencies": [
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysecondSUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:subnet/subnet-0ded6a82d6da4af81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded6a82d6da4af81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648207145026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Prod-vpc,sub1,sub2"
            },
            "tags_all": {
              "name": "Prod-vpc,sub1,sub2"
            },
            "vpc_id": "vpc-0b2cb28c9e688e12d"
          },
          "dependencies": [
            "aws_vpc.firstVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "firstVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:648207145026:vpc/vpc-0b2cb28c9e688e12d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0e682d495c1654323",
            "default_route_table_id": "rtb-09c30e803586413a9",
            "default_security_group_id": "sg-00442fca4cdafb468",
            "dhcp_options_id": "dopt-092129bf7d9b9a575",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b2cb28c9e688e12d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c30e803586413a9",
            "owner_id": "648207145026",
            "tags": {
              "name": "Prod-vpc,sub1,sub2"
            },
            "tags_all": {
              "name": "Prod-vpc,sub1,sub2"
            }
          }
        }
      ]
    }
  ]
}